fix(chip-set): make input value color respect dark mode again

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -64,6 +64,15 @@ $leading-icon-space: 1.5rem;
     }
 }
 
+.mdc-text-field__input {
+    .mdc-text-field:not(.mdc-text-field--disabled) & {
+        color: shared_input-select-picker.$input-text-color;
+    }
+    .mdc-text-field.mdc-text-field--disabled & {
+        color: shared_input-select-picker.$input-text-color-disabled;
+    }
+}
+
 .mdc-text-field {
     height: auto;
     cursor: text;
